[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Projectiles/Entities/enproj4.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Props/Cygio/missile.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_7.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_8.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_9.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_10.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Particules/Explosion/sprite171_11.png" type="Texture" id=14]
[ext_resource path="res://Sons/Explo3.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 123.023

[node name="soldier" type="KinematicBody2D"]
z_index = -1
collision_layer = 34
collision_mask = 5
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 9.22317, 0 )
rotation = 1.5708
frames = SubResource( 1 )
playing = true

[node name="veg" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.0267747, 0.056822 )
z_index = -1
polygon = PoolVector2Array( -8.79847, -3.07996, 0.0887906, -5.41039, 9.96352, -3.51444, 15.2169, -0.117536, 9.96352, 3.27937, 0.0887906, 5.33332, -8.75897, 2.96338, -9.98344, -0.078037 )

[node name="Timer" type="Timer" parent="."]

[node name="boulpos" type="Position2D" parent="."]
position = Vector2( 0.0417964, 0.0117511 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -9.08365, -3.70358, 0.0227337, -6.0226, 10.1472, -4.09951, 16.1993, 0.0294724, 10.2038, 3.93221, 0.192419, 6.08154, -9.02709, 3.59284, -10.7239, 0.0860338 )

[node name="explode" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="active" type="Timer" parent="."]

[node name="Son" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="active" to="." method="_on_active_timeout"]
